# multi-reports

./: .dockerignore  docker-compose.yml  pyproject.toml
app/: main.py
app/data/: catalogo_produtos.md  nexus_history_24_months.csv  planos_e_atas.md  relatorio_mensal_2024.md  relatorio_mensal_2025.md
