[project]
name = "multi-reports"
version = "0.1.0"
description = ""
authors = [
    {name = "raulward",email = "raulwarddev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0.0"
dependencies = [
    "fastapi (>=0.128.4,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "langgraph (>=1.0.8,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "plotly (>=6.5.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "multi_reports", from = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
